# vLLM-Hook

./: LICENSE.txt  MANIFEST.in  README.md  inge_test.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demo_actsteer.py  demo_attntracker.py  demo_corer.py  demo_hiddenstate.py
notebooks/: demo_actsteer.ipynb  demo_attntracker.ipynb  demo_corer.ipynb
vllm_hook_plugins/: __init__.py
vllm_hook_plugins/vllm_hook_plugins/: __init__.py  hook_llm.py  registry.py
vllm_hook_plugins/vllm_hook_plugins/model_configs/activation_steer/: Phi-3-mini-4k-instruct.json  granite-3.1-8b-instruct.json
vllm_hook_plugins/vllm_hook_plugins/model_configs/attention_tracker/: Meta-Llama-3-8B-Instruct.json  Mistral-7B-Instruct-v0.3.json  Qwen2-1.5B-Instruct.json  granite-3.1-8b-instruct.json
vllm_hook_plugins/vllm_hook_plugins/model_configs/core_reranker/: Mistral-7B-Instruct-v0.3.json
vllm_hook_plugins/vllm_hook_plugins/model_configs/hidden_states/: Qwen2.5-3B-Instruct.json
vllm_hook_plugins/vllm_hook_plugins/workers/: probe_hidden_states_worker.py
