[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-hook-plugins"
version = "0.0.1"
description = "A modular plugin library for vLLM to inspect, analyze, and steer model internals"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "IBM Research" }]
requires-python = ">=3.8"
keywords = ["vllm", "llm", "hooks", "plugins", "attention", "activation", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vllm>=0.5.0",
    "torch>=2.0",
    "numpy>=1.24",
    "blake3",
]

[project.urls]
Homepage = "https://github.com/IBM/vLLM-Hook"
Repository = "https://github.com/IBM/vLLM-Hook"

[project.entry-points."vllm.general_plugins"]
hook_registry = "vllm_hook_plugins:register_plugins"

[tool.setuptools.packages.find]
where = ["vllm_hook_plugins"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vllm_hook_plugins = ["model_configs/**/*.json"]
